--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.container {
+    width: 920px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.toolbar-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.toolbar-item {
+    padding: 5px 10px;
+    color: #555555;
+    outline: 1px solid #555555;
+    cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.toolbar-item:not(:last-child) {
+    margin-right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.toolbar-item:hover {
+    outline-width: 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.selected {
+    background-color: #555555;
+    color: #fff;
+}
+
+.projects-list {
+    list-style-type: none;
+    padding: 0;
+    columns: 3;
+}
+
+.projects-item {
+}
+
+.projects-item img {
+    display: block;
+    width: 100%;
+    margin-bottom: 16px;
 }
